# CV

./: bun.lockb  index.html  package-lock.json  package.json
src/: main.ts  style.css
src/module/: game.ts  sort.ts  water.ts
src/pkg/: package.json  water_simulation.d.ts  water_simulation.js  water_simulation_bg.js  water_simulation_bg.wasm  water_simulation_bg.wasm.d.ts
src/store/: animationButtonStore.ts
src/wasm_src/: Cargo.toml  LICENSE_MIT
src/wasm_src/src/: distanceAndAngle.rs  lib.rs  particle.rs  particle_system.rs
